user service implementation update, set average rating bug fix , change favorite connections many to many
